# tp-spectrum

./: .gitignore  ChangeLog  Makefile.am  SpectrumDevices.pm  configure.ac  spectrum-ddcfg.pl  spectrum-wrapper.sh  spectrum_genddx.in  spectrumdevs.in  substvars.sh.in  tp-spectrum.pod.in
